--- a/src/index.css
+++ b/src/index.css
@@ -318,167 +318,66 @@ footer a{
     color: rgb(199, 194, 194);
 }
 
-
-
-  /*Login */
-.login{
-    display: flex;  
-    width: 100%;  
-    height: 100vh;
+/*Login*/
+.login-fondo{
+    display:flex;
     justify-content: center;
     align-items: center;
-}
-.card-login{
-    background-color: #fff;
-    width: 30%;
-    height: 500px;
-    border-radius: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.login-info{
-    width: 80%;
     height: 100%;
-    padding: 1rem;
+}
+.login-box{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 500px;
+    background-color:#fff;
 }
-.login-text{
-    text-align: center;
-}
-form{
-    height: 280px;
+.form{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    align-items: center;
+    width: 65%;
+    height: 60%;
 }
-form div:nth-child(3){
-    text-align: center;
+.form h2{
+    font-size: 2rem;
 }
-label{
-    display: inline-block;
-}
-input{
-    display: block;
+.inputs_login{
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 35px;
-    border: 2px solid rgb(218, 217, 217);
-    border-radius: 0.2rem;
 }
 
-.btn-glb{
-    width: 80px;
-    height:40px;
-    background-color: rgb(65, 182, 250);
-    border-radius: 0.2rem;
+.inputs_login input:focus{
+    outline: 2px solid rgb(235, 129, 203);
+}
+.inputs_login input{
+    outline: 2px solid rgb(214, 214, 214);
     border: none;
+    border-radius: 0.2rem;
+    padding: 1rem;
+    width: 100%;
+}
+.inputs_login input{
+    margin-bottom: 1rem;
+}
+.inputs_login a{
+    color: rgb(235, 129, 203);
+    cursor: pointer;
+    text-align: center;
+}
+.btn_login{
+    width: 100%;
+}
+.btn_login input{
+    width: 100%;
+    height: 45px;
+    background-color: rgb(235, 129, 203);
+    border: none;
+    border-radius: 0.2rem;
     color: #fff;
     cursor: pointer;
-}
-.btn-glb:hover{
-    background-color: rgb(65, 182, 250,0.7);
-}
-
-/*Seccion Agenda*/
-.container-agenda{
-    padding: 1rem;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(2,1fr);
-    gap:2rem;
-}
-.card-agenda{
-    background: rgba(255,255,255,1);
-    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 82%, rgba(153,133,66,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(82%, rgba(255,255,255,1)), color-stop(100%, rgba(153,133,66,1)));
-    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 82%, rgba(153,133,66,1) 100%);
-    background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 82%, rgba(153,133,66,1) 100%);
-    background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 82%, rgba(153,133,66,1) 100%);
-    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 82%, rgba(153,133,66,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#998542', GradientType=0 );
-    height: 500px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    align-items: center;
-    text-align: center;
-    border-radius: 0.4rem;
-    padding: 1rem;
-    -webkit-transition: all 0.5s 0s ease;
-    -moz-transition: all 0.5s 0s ease;
-    -o-transition: all 0.5s 0s ease;
-    transition: all 0.5s 0s ease;
-}
-.card-agenda:hover{
-    box-shadow: 4px 11px 43px -14px rgba(0,0,0,0.47);
-    -webkit-box-shadow: 4px 11px 43px -14px rgba(0,0,0,0.47);
-    -moz-box-shadow: 4px 11px 43px -14px rgba(0,0,0,0.47);
-}
-.card-img img{
-    position: relative;
-    border-radius: 50%;
-    height: 200px;
-    height: 200px;
-    object-fit: cover;
-    transition: all 0.3s ease;
-    border-top: 8px solid rgb(153, 133, 66);
-    border-bottom: 8px solid rgb(153, 133, 66);
-}
-.container-agenda .card-agenda:nth-child(1){
-    grid-column: 1/2;
-}
-.container-agenda .card-agenda:nth-child(2){
-    grid-column: 2/3;
-}
-.container-agenda .card-agenda:nth-child(3){
-    grid-column: 3/4;
-}
-.container-agenda .card-agenda:nth-child(4){
-    grid-column: 1/2;
-}
-.container-agenda .card-agenda:nth-child(5){
-    grid-column: 2/3;
-}
-.container-agenda .card-agenda:nth-child(6){
-    grid-column: 3/4;
-}
-
-.agenda-contacto{
-    height: auto;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.agenda-contacto h6{
-    padding-top: 20px;
-}
-.info-contacto{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.info-contacto div{
-    width:100%;
-    display: flex;
-    justify-content: center;
-}
-.info-contacto div i{
-    padding-right: 0.5rem;
-}
-.container-iconos{
-    width: 40%;
-    display: flex;
-    justify-content: space-evenly;
-}
-.card-agenda h3{
-    color: rgb(153, 133, 66);
 }
