--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,10 @@ header nav ul li i{
     color: rgb(235, 129, 203);
     font-size: 1.2rem;
 }
+header nav ul li i:hover{
+    color: rgb(235, 129, 203,0.5);
+    font-size: 1.5rem;
+}
 .ocultar-menu{
     display: none;
 }
@@ -94,7 +98,7 @@ header nav ul li i{
 aside{
     grid-column: 1/2;
     grid-row: 1/4;
-    background-color: rgb(4,28,44);
+    background-color: rgb(0,59,113);
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 10% 10% 80%;
@@ -102,16 +106,10 @@ aside{
 }
 .logo{
     grid-column: span 1;
-    grid-row: 1/2;
-    padding: 0.5rem;
+    grid-row: 1/3;
+    padding: 1rem;
 }
-.isotipo{
-    grid-column: span 1;
-    grid-row: 2/3;
-}
-.isotipo img{
-    height: 80px;
-}
+
 .sidebar-nav{
     grid-column: span 1;
     grid-row: 3/4;
@@ -131,8 +129,8 @@ aside{
     font-size: 12px;
 }
 .sidebar-nav ul li{
-    padding: 1rem;
     width: 100%;
+    padding: 0.5rem;
 }
 
 .sidebar-nav ul li a{
@@ -152,18 +150,17 @@ aside{
 .sidebar-nav ul li a:hover{
     color:rgb(235, 129, 203);
 }
-
 .item{
     width: 100%;
     display: flex;
     align-items: center;
 }
 .item i{
-    padding-right: 1.2rem;
+    padding-left: 1rem;
 }
 .item-close{
-    font-size: 1.2rem;
-    padding-left: 0.8rem;
+    font-size: 1.8rem;
+    padding-left: 1rem;
 }
 .close-menu{
     display: none;
@@ -175,133 +172,52 @@ aside{
     grid-row: 2/3;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 5%;
+    grid-template-rows: 1fr;
     gap: 10px;
-    
 }
-
-.container{
-    grid-column: 1fr;
-    grid-row: 1/2;
+/*Contenedor Home*/
+.container-home{
     display: grid;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: repeat(6,1fr);
-    gap: 10px;
+    gap:10px;
     padding: 1rem;
 }
-.card-color{
+.seccion1{ 
+    grid-column: 1/5;
+    grid-row: 1/2;
     background-color: #fff;
 }
-
-.card-flex{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Poppins', sans-serif;
+.seccion2{
+    grid-column: 5/9;
+    grid-row: 1/2;
+    background-color: #fff;
 }
-.icon{
-    font-size: 3rem;
-    padding: 1rem;
+.seccion3{
+    grid-column: 9/13;
+    grid-row: 1/2;
+    background-color: #fff;
 }
-.card1 .icon{
-    color: rgb(74, 202, 127);
-}
-.card2 .icon{
-    color: rgb(57, 205, 224);
-}
-.card3 .icon{
-    color: rgb(214, 43, 94);
-}
-.card4 .icon{
-    color: rgb(116, 236, 190);
-}
-.card1{
-    grid-column: 1/4;
-    grid-row:1/2;
-}
-.card2{
-    grid-column:4/7;
-    grid-row:1/2;
-}
-.card3{
-    grid-column:7/10 ;
-    grid-row:1/2;
-}
-.card4{
-    grid-column:10/13 ;
-    grid-row:1/2;
-}
-.card5{
-    grid-column: 1/5;
+.seccion4{
+    grid-column: 1/9;
     grid-row: 2/5;
+    background-color: #fff;
+    padding: 1rem;
 }
-.card6{
-    grid-column:5/13 ;
+.seccion5{
+    grid-column: 9/13;
     grid-row: 2/5;
+    background-color: #fff;
 }
-.card7{
-    width: 100%;
-    grid-column:1/7 ;
+.seccion6{
+    grid-column: 1/7;
     grid-row: 5/7;
+    background-color: #fff;
 }
-.card8{
-    grid-column:7/13 ;
+.seccion7{
+    grid-column: 7/13;
     grid-row: 5/7;
-}
-
-.table{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 1rem;
-    font-size:0.7rem;
-}
-.table h4{
-    text-align: left;
-    font-size: 1rem;
-    padding: 0.5rem;
-    color:rgb(235, 129, 203);
-}
-table{
-    width: 100%;
-    padding: 1rem;
-    border-collapse: collapse;
-    text-align: left;
-    overflow: hidden;
-    text-align: left;
-}
-thead{
-    background-color: rgb(233, 230, 230);
-}
-th{
-    padding: 0.5rem;
-    font-size: 0.9rem;
-    letter-spacing: 0.1rem;
-    font-weight: 900;
-}
-td{
-    padding: 0.5rem;
-    font-weight: 400;
-}
-tr{
-    padding: 1rem;
-}
-tr:nth-child(even){
-    background-color: rgb(247, 241, 241);
-}
-
-.status-ok{
-    border-radius: 1rem;
-    background-color: rgb(131, 243, 131);
-    padding: 0.2rem 1rem;
-    text-align: center;
-}
-.status-pending{
-    border-radius: 1rem;
-    background-color: rgb(236, 197, 20);
-    padding: 0.2rem 1rem;
-    text-align: center;
+    background-color: #fff;
 }
 
 /*Footer*/
