✨[30/03/2022] - Integramos la landing page al proyecto

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
 @import 'utilities/mixins';
 @import 'utilities/variables';
 @import 'global/body.scss';
+@import 'home/globa.scss';
+@import 'home/hero.scss';
