--- a/src/styles/home/globa.scss
+++ b/src/styles/home/globa.scss
@@ -7,5 +7,81 @@
     align-items: center;
     padding: 0.5rem 1rem;
     font-size: 1.5rem;
+
+    &-desk {
+      display: none;
+    }
+
+    @include breakpoint(medium) {
+      &-mobile {
+        display: none;
+      }
+
+      &-desk {
+        display: flex;
+        
+        ul {
+          display: flex;
+          gap: 1rem;
+          list-style: none;
+          font-size: 18px;
+        }
+
+        li:hover {
+          color: $orange;
+          cursor: pointer;
+        }
+      }
+    }
   }
+
+  &-login:hover {
+    cursor: pointer;
+    color: $orange;
+  }
+}
+
+.open-menu-mobile {
+  background-color: $white-opacity;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  height: 100vh;
+  width: 100%;
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    li {
+      margin: 30px 0px;
+    }
+  }
+
+  &-x {
+    display: flex;
+    justify-content: end;
+    margin-right: 17px;
+    margin-top: 20px;
+
+    i {
+      font-size: 30px;
+    }
+  }
+
+  @include breakpoint(medium) {
+    .open-menu-mobile {
+      flex-direction: row;
+    }
+
+    &-x {
+      display: none;
+    }
+  }
+
 }
